[gd_scene load_steps=4 format=3 uid="uid://cmc6yj1huy3lg"]

[ext_resource type="Script" path="res://Scripts/Shop.gd" id="1_msp2k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ct140"]
content_margin_left = 20.0
content_margin_top = 50.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(1.61592e-06, 0.689811, 0.594144, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cwpu7"]

[node name="Shop_Panel" type="PanelContainer"]
process_mode = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -287.0
offset_top = -392.0
offset_right = 94.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.52115, 1.57212)
theme_override_styles/panel = SubResource("StyleBoxFlat_ct140")
script = ExtResource("1_msp2k")

[node name="Shop" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Coins_Label" type="Label" parent="Shop"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_cwpu7")
text = "Coins "

[node name="HSeparator" type="HSeparator" parent="Shop"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Shop"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="Prev_button" type="Button" parent="Shop/HBoxContainer"]
layout_mode = 2
text = "<"

[node name="VBoxContainer" type="VBoxContainer" parent="Shop/HBoxContainer"]
layout_mode = 2

[node name="mod_name" type="Label" parent="Shop/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Modifier Name"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Shop/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
value = 60.0
show_percentage = false

[node name="Value_Label" type="Label" parent="Shop/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Cost_Label" type="Label" parent="Shop/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Cost : 100"
horizontal_alignment = 1

[node name="Buy_Button" type="Button" parent="Shop/HBoxContainer/VBoxContainer"]
process_mode = 2
layout_mode = 2
text = "Buy"

[node name="Next_button" type="Button" parent="Shop/HBoxContainer"]
layout_mode = 2
text = ">"

[node name="HSeparator2" type="HSeparator" parent="Shop"]
layout_mode = 2

[node name="Close_button" type="Button" parent="Shop"]
layout_mode = 2
text = "Close"

[connection signal="pressed" from="Shop/HBoxContainer/Prev_button" to="." method="_on_prev_button_pressed"]
[connection signal="pressed" from="Shop/HBoxContainer/VBoxContainer/Buy_Button" to="." method="_on_buy_button_pressed"]
[connection signal="pressed" from="Shop/HBoxContainer/Next_button" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="Shop/Close_button" to="." method="_on_close_button_pressed"]
